<resources>
    <string name="app_name">Tourist Token App </string>
    <string name="title_activity_main">Tourist Token</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="recover">Recover</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="scan">Scan the QR</string>
    <string name="citys">Citys</string>
    <string name="Sightseeings">Sightseeings</string>
    <string name="shop">Shop</string>
</resources>
