<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_location_city"
            android:title="@string/Sightseeings" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_qr"
            android:title="@string/scan" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out" />
    </group>


</menu>
