<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:src="@drawable/logo"
        android:id="@+id/main_logo"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_username_layout"
        android:layout_below="@id/main_logo"
        android:textColorHint="@android:color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/username"
            android:id="@+id/login_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username_layout"
        android:id="@+id/login_password_layout"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/password"
            android:id="@+id/login_password"/>
    </android.support.design.widget.TextInputLayout>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/sign_in"
        android:layout_below="@id/login_password_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/main_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:id="@+id/sign_in"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@id/sign_in"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/recover"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/recover"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/sign_up"/>

    </LinearLayout>

</RelativeLayout>